[gd_scene load_steps=5 format=2]

[ext_resource path="res://Data/Scripts/Blackjack.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec3 color = vec3(0.35, 0.48, 0.95);
uniform int OCTAVES = 4;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(56, 78)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * 20.0;

	vec2 motion = vec2( fbm(coord + vec2(TIME * -0.5, TIME * 0.5)) );

	float final = fbm(coord + motion);

	COLOR = vec4(color, final * 0.5);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color = Vector3( 0.35, 0.48, 0.95 )
shader_param/OCTAVES = 4

[sub_resource type="GradientTexture" id=3]

[node name="Blackjack" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 135 )

[node name="Background" type="Node2D" parent="."]

[node name="Smoke" type="Sprite" parent="Background"]
visible = false
material = SubResource( 2 )
position = Vector2( 278, 135 )
scale = Vector2( 0.271484, 270 )
texture = SubResource( 3 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="GUI"]
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="MarginContainer" parent="GUI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -50.0
margin_right = 42.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/Controls"]
margin_right = 84.0
margin_bottom = 40.0

[node name="Hit" type="Button" parent="GUI/HUD/Controls/HBoxContainer"]
margin_right = 31.0
margin_bottom = 40.0
text = "Hit"

[node name="Stand" type="Button" parent="GUI/HUD/Controls/HBoxContainer"]
margin_left = 35.0
margin_right = 82.0
margin_bottom = 40.0
text = "Stand"

[node name="MarginContainer" type="MarginContainer" parent="GUI/HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="Control" parent="GUI/HUD/MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="playerHand" type="Label" parent="GUI/HUD/MarginContainer/Data"]
margin_left = 7.0
margin_top = 7.0
margin_right = 95.0
margin_bottom = 27.0
text = "Your Hand:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dealerHand" type="Label" parent="GUI/HUD/MarginContainer/Data"]
margin_left = 7.0
margin_top = 30.0
margin_right = 95.0
margin_bottom = 50.0
text = "Dealer Hand:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GUI/HUD/Controls/HBoxContainer/Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="GUI/HUD/Controls/HBoxContainer/Stand" to="." method="_on_Stand_pressed"]
